--- a/packages/ui/src/css/variables.css
+++ b/packages/ui/src/css/variables.css
@@ -159,4 +159,10 @@
 
   --transition-in: all 0.2s ease-in;
   --transition-out: all 0.17s ease-out;
+
+  --layer-xlow: 1;
+  --layer-low: 10;
+  --layer: 100;
+  --layer-high: 1000;
+  --layer-xhigh: 10000;
 }
